--- a/Style.css
+++ b/Style.css
@@ -74,3 +74,18 @@ table {
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
+a, dl, h3 {
+    margin-left:15px; 
+}
+
+p {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+img {
+    width: 100%;
+    height: 400px;
+    align-content: center
+}
