--- a/Style.css
+++ b/Style.css
@@ -89,3 +89,14 @@ img {
     height: 400px;
     align-content: center
 }
+
+.verticalComponent {
+    float: left;
+    width: 33.33%;
+}
+
+.verticalSection:after {
+    content: "";
+    display: table;
+    clear: both;
+}
